--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   	<modelVersion>4.0.0</modelVersion>
 	<groupId>uy.com.uma</groupId>
 	<artifactId>comun</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5</version>
 	<name>Comun</name>
 	<description>Logica de utileria de uso comun en todos los proyectos</description>
 	<properties>
@@ -19,6 +19,16 @@
     		<groupId>javax.mail</groupId>
     		<artifactId>mail</artifactId>
     		<version>1.4.7</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.json</groupId>
+			<artifactId>javax.json-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.glassfish</groupId>
+    		<artifactId>javax.json</artifactId>
+    		<version>1.0.4</version>
 		</dependency>
   </dependencies>
 </project>
